--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "scripts": {
     "lite": "lite-server",
     "start": "npm run lite",
+    "scss": "node-sass -o css/ css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Blaine",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "^2.3.0",
+    "node-sass": "^4.12.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "node": "^12.16.1",
     "popper.js": "^1.12.9"
   }
 }
